--- a/main/static/main/scss/_news.scss
+++ b/main/static/main/scss/_news.scss
@@ -1,18 +1,7 @@
 .news-bg {
   background-color: #f8f8f8;
 }
-.text-area {
-  width: 600px;
-  padding-bottom: 2em;
-  position: relative;
-  height: 100%;
-}
-.end-area {
-  width: 600px;
-  height: 70px;
-  position: absolute;
-  bottom: 0;
-}
+
 .notice {
   color:#666;
   text-align: center;
@@ -28,20 +17,14 @@ span.date {
   display: inline;
 }
 .news-block {
-  max-width: 80%;
-  min-width: 600px;
-  margin-left: 10%;
-  margin-right: 10%;
   min-height: 400px;
-
   position: relative;
-  border: 1px solid #CCCCCC;
   background-color: white;
 
   ul {
     margin-bottom: 60px;
     margin-left: 30px;
-
+    margin-right: 30px;
   }
 
   li {
@@ -79,6 +62,46 @@ span.date {
     border-bottom: 0;
   }
 }
+.text-area {
+  width: 600px;
+  padding-bottom: 2em;
+  position: relative;
+  height: 100%;
+}
+.end-area {
+  width: 600px;
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+}
+@media (max-width:720px) {
+.news-block {
+  width: 100%;
+  border-top: 1px solid #CCCCCC;
+  border-bottom: 1px solid #CCCCCC;
+}
+.text-area {
+  width: 100%;
+}
+.end-area {
+  width: 100%;
+}
+.content {
+  img {
+    max-width: 100%;
+  }
+}
+}
+@media (min-width:721px) {
+.news-block {
+  max-width: 80%;
+  min-width: 600px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: 1px solid #CCCCCC;
+}
+
+}
 .right {
   display: inline;
   float: right;
@@ -104,6 +127,11 @@ span.date {
 
 	border-top: 1px solid #c1c2c6;
 	border-bottom: 1px solid #c1c2c6;
+}
+@media (max-width:720px) {
+#page-list {
+  left: 0px;
+}
 }
 #page-list span {
 	padding: 0px 10px;
